# neutron-tools

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  development.yml  pyproject.toml
config/: neutrons_tool_conf.xml  neutrons_tool_data_table_conf.xml  table_combine.py  tool_combine.py  tool_data_table_conf.xml  tools_conf.xml  xml_combine.py
dockerfiles/: Dockerfile  Dockerfile.interactive_test  Dockerfile.linter  dummy_tool.xml  start_docker.sh
scripts/: push_to_gateway.py
single_peak_fit/: enpp.json  tool_config.xml
single_peak_fit/docker_single_peak_fit/: Dockerfile  README.md  build_single_peak_fit.sh  environment.yaml  pyproject.toml  run_single_peak_fit.sh
tests/: conftest.py  interactive_tools.py  test_tool_xml.py
tool-data/: instruments.loc  mcu_supported_instruments.loc  sns_seq_pv.json
tool_data/: mcu_supported_instruments.loc
tools/: list_instruments.py
tools/armada/: export_ckan.xml  ingest_ckan.xml  matisse_ng_siting.xml
tools/fusion/: dream3d.xml  ips_fastran.xml  ips_fastran_gui.xml
tools/ndip_tools/: copy_machine.xml  default_notebook.ipynb  interactivetool_jupyter_notebook.xml  local_to_remote.py  local_to_remote.xml  remote_command.xml  remote_to_local.xml  run_notebook.sh
tools/neutrons/: Incident_beam_simulation_diffractometer.xml  Plot_chiRPA_qxqy.py  airsans_demo.xml  amml_cp2k.xml  amml_cp2k_convert.xml  amml_lammps.xml  amml_oclimax.xml  amml_pclimax.xml  amml_train.xml  andrew_test_proto_process.xml  asrp_diffpy_cmi_refinement.xml  asrp_gsas2_bbo_refinement.xml  copy_machine.xml  (+132 more)
utils/: push_tools.py
(+223 files in other folders)
